RESOLVED FIXED119603
Fix ASSERT(m_contentsSolidColor.isValid()) assertion on iOS at nytimes.com
https://bugs.webkit.org/show_bug.cgi?id=119603
Summary Fix ASSERT(m_contentsSolidColor.isValid()) assertion on iOS at nytimes.com
Simon Fraser (smfr)
Reported 2013-08-08 15:57:14 PDT
Fix ASSERT(m_contentsSolidColor.isValid()) assertion on iOS at nytimes.com
Attachments
Patch (4.01 KB, patch)
2013-08-08 16:00 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2013-08-08 16:00:20 PDT
WebKit Commit Bot
Comment 2 2013-08-08 19:39:01 PDT
Comment on attachment 208378 [details] Patch Clearing flags on attachment: 208378 Committed r153875: <http://trac.webkit.org/changeset/153875>
WebKit Commit Bot
Comment 3 2013-08-08 19:39:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.